--- a/SmartContactManager/src/main/resources/templates/base.html
+++ b/SmartContactManager/src/main/resources/templates/base.html
@@ -48,7 +48,8 @@
 					<li class="nav-item"><a class="nav-link" href="#">About</a></li>
 					
 					
-					<li class="nav-item"><a class="nav-link " href="#" 
+					<li class="nav-item"><a class="nav-link " href="#"
+					th:href="@{/signin}" 
 					tabindex="-1" aria-disabled="true">Login</a>
 					</li>
 					
