--- a/SmartContactManager/src/main/resources/templates/normal/user_dashboard.html
+++ b/SmartContactManager/src/main/resources/templates/normal/user_dashboard.html
@@ -1,18 +1,39 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-	th:replace="base::Layout(~{::section})">
+	th:replace="normal/base::Layout(~{::section})">
 <head>
-<meta charset="UTF-8" >
+<meta charset="UTF-8" />
 
-<title>This is Home Page</title>
+<title>User Dashboard </title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 	<section >
 
+		<div class="container">
+		
+		<div class="card">
+		
+		<div class="card-body my-5">
+		
+		<div class="container text-center">
+		
+				<img style="height:200px; width:200px; border:none;" class="profilePic"  th:src="@{'/img/main.png'}">
+		
+		</div>
+		
+		<h1 class="text-center mt-3 text-secondary font-italic">Start Adding your contacts on Cloud</h1>
+		
+		<a th:href="@{/user/add-contact}" class="btn btn-primary btn-block text-uppercase mt-4" >Add my Contacts</a>
 		
 		
+		</div>
+		
+		</div>
+		
+		</div>
+				
 
 
 
